
### INI

 * [Remove-IniEntry](http://get-carbon.org/help/Remove-IniEntry.html) now writes messages with `Write-Verbose` instead of `Write-Host`.
 * [Set-IniEntry](http://get-carbon.org/help/Set-IniEntry.html) now writes messages with `Write-Verbose` instead of `Write-Host`.

### Internet Explorer

 * [Disable-IEEnhancedSecurityConfiguration](http://get-carbon.org/help/Disable-IEEnhancedSecurityConfiguration.html) now writes messages with `Write-Verbose` instead of `Write-Host`.
 * [Enable-IEActivationPermission](http://get-carbon.org/help/Enable-IEActivationPermission.html) now writes messages with `Write-Verbose` instead of `Write-Host`.

### MSI

 * [Invoke-WindowsInstaller](http://get-carbon.org/help/Invoke-WindowsInstaller.html) no longer writes messages with `Write-Host`. Improved error message if installation fails.

### MSMQ

 * [Grant-MsmqMessageQueuePermission](http://get-carbon.org/help/Grant-MsmqMessageQueuePermission.html) no longer writes messages with `Write-Host`.

## Bug Fixes

### General

 * Importing Carbon gives an error if `PATH` environment variable contains an empty path.
 
### Path

 * [Resolve-PathCase](http://get-carbon.org/help/Resolve-PathCase.html) didn't work under Windows 2012 R2.

 
# 1.7.0 (30 April 2014)

There is now [a Carbon support mailing list](http://www.freelists.org/list/carbon).

## Enhancements

### General

 * Import-Carbon.ps1 now supports the `-WhatIf` switch.
 * Import-Carbon.ps1 now hides verbose log messages when removing/importing Carbon even when supplying the `-Verbose` switch because I think the verbose output is too verbose and not helpful at all.
 * Import-Carbon.ps1 now supports adding a prefix when importing the Carbon module (with the `Prefix` parameter) to avoid name collisions and [follow best practices](http://blogs.msdn.com/b/powershell/archive/2014/04/07/what-s-in-a-name-using-the-ps-prefix.aspx).
 
### Certificates
